; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/heimdal/kadmin/extr_get.c_free_columns.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/heimdal/kadmin/extr_get.c_free_columns.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.get_entry_data = type { %struct.field_info*, %struct.field_info** }
%struct.field_info = type { %struct.field_info*, %struct.field_info* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.get_entry_data*)* @free_columns to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @free_columns(%struct.get_entry_data* %0) #0 {
  %2 = alloca %struct.get_entry_data*, align 8
  %3 = alloca %struct.field_info*, align 8
  %4 = alloca %struct.field_info*, align 8
  store %struct.get_entry_data* %0, %struct.get_entry_data** %2, align 8
  %5 = load %struct.get_entry_data*, %struct.get_entry_data** %2, align 8
  %6 = getelementptr inbounds %struct.get_entry_data, %struct.get_entry_data* %5, i32 0, i32 0
  %7 = load %struct.field_info*, %struct.field_info** %6, align 8
  store %struct.field_info* %7, %struct.field_info** %3, align 8
  br label %8

8:                                                ; preds = %21, %1
  %9 = load %struct.field_info*, %struct.field_info** %3, align 8
  %10 = icmp ne %struct.field_info* %9, null
  br i1 %10, label %11, label %23

11:                                               ; preds = %8
  %12 = load %struct.field_info*, %struct.field_info** %3, align 8
  %13 = getelementptr inbounds %struct.field_info, %struct.field_info* %12, i32 0, i32 1
  %14 = load %struct.field_info*, %struct.field_info** %13, align 8
  %15 = call i32 @free(%struct.field_info* %14)
  %16 = load %struct.field_info*, %struct.field_info** %3, align 8
  %17 = getelementptr inbounds %struct.field_info, %struct.field_info* %16, i32 0, i32 0
  %18 = load %struct.field_info*, %struct.field_info** %17, align 8
  store %struct.field_info* %18, %struct.field_info** %4, align 8
  %19 = load %struct.field_info*, %struct.field_info** %3, align 8
  %20 = call i32 @free(%struct.field_info* %19)
  br label %21

21:                                               ; preds = %11
  %22 = load %struct.field_info*, %struct.field_info** %4, align 8
  store %struct.field_info* %22, %struct.field_info** %3, align 8
  br label %8

23:                                               ; preds = %8
  %24 = load %struct.get_entry_data*, %struct.get_entry_data** %2, align 8
  %25 = getelementptr inbounds %struct.get_entry_data, %struct.get_entry_data* %24, i32 0, i32 0
  store %struct.field_info* null, %struct.field_info** %25, align 8
  %26 = load %struct.get_entry_data*, %struct.get_entry_data** %2, align 8
  %27 = getelementptr inbounds %struct.get_entry_data, %struct.get_entry_data* %26, i32 0, i32 0
  %28 = load %struct.get_entry_data*, %struct.get_entry_data** %2, align 8
  %29 = getelementptr inbounds %struct.get_entry_data, %struct.get_entry_data* %28, i32 0, i32 1
  store %struct.field_info** %27, %struct.field_info*** %29, align 8
  ret void
}

declare dso_local i32 @free(%struct.field_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
